--- a/app1/templates/switches/sw1.html
+++ b/app1/templates/switches/sw1.html
@@ -4,6 +4,7 @@
 {% block sw1 %}
 <div class="sw1_block">
     <table class="table">
+        <caption class="mcaption">Выберите коммутатор</caption>
         <colgroup>
             <col span="9" style="background:rgb(143, 240, 140)">
             <!-- С помощью этой конструкции задаем цвет фона для первых двух столбцов таблицы-->
