--- a/app1/static/storemac.css
+++ b/app1/static/storemac.css
@@ -94,6 +94,17 @@ h6 {
     float: up;
     padding: 10;
 }
+
+.storemenu2 {
+    border: 1px solid rgb(23, 0, 128);
+    /*background-color: rgb(105, 120, 255);*/
+    width: 100%;
+    height: 90%;
+    float: up;
+    padding: 10;
+    overflow-y: auto;
+}
+
 .search-panel {
     width: 100%;
     float: up;
