--- a/app1/templates/switches/switch_list.html
+++ b/app1/templates/switches/switch_list.html
@@ -12,9 +12,11 @@ Switches
     <form class="search-panel" action="{% url 'SwChoiceView' %}" method="post">
         {% csrf_token %}
         <div class="storemenu">
-            <button class="btn-search btn btn-outline-success my-2 my-sm-0" type="submit">Новый</button>
-            <button class="btn-search btn btn-outline-success my-2 my-sm-0" type="submit">Редактировать</button>
-            <button class="btn-search btn btn-outline-success my-2 my-sm-0" type="submit">Удалить</button>
+            <button class="btn-search btn btn-outline-success my-2 my-sm-0" name="_create" type="submit">Новый</button>
+            <button class="btn-search btn btn-outline-success my-2 my-sm-0" name="_edit"
+                type="submit">Редактировать</button>
+            <button class="btn-search btn btn-outline-success my-2 my-sm-0" name="_delete"
+                type="submit">Удалить</button>
         </div>
 
 
