--- a/app1/templates/include/base.html
+++ b/app1/templates/include/base.html
@@ -8,6 +8,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"-->
     <link rel="stylesheet" href="{% static '/sw1.css' %}">
     <link rel="stylesheet" href="{% static '/storemac.css' %}">
+    <link rel="stylesheet" href="{% static '/form.css' %}">
     <title>
         {% block title %}
         Main1
