--- a/app1/templates/include/base.html
+++ b/app1/templates/include/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static '/sw1.css' %}">
     <link rel="stylesheet" href="{% static '/storemac.css' %}">
     <link rel="stylesheet" href="{% static '/form.css' %}">
+    <link rel="stylesheet" href="{% static '/views.css' %}">
     <title>
         {% block title %}
         Main1
