--- a/app1/static/storemac.css
+++ b/app1/static/storemac.css
@@ -97,7 +97,7 @@ h6 {
 
 .storemenu2 {
     border: 1px solid rgb(23, 0, 128);
-    /*background-color: rgb(105, 120, 255);*/
+    background-color: rgb(105, 120, 255);
     width: 100%;
     height: 90%;
     float: up;
@@ -149,4 +149,18 @@ h6 {
     background-color: rgb(140, 195, 240);
     overflow-y: auto;
     z-index: 0;
+}
+
+.sw3_block {
+    /*border: 1px solid rgb(128, 0, 43);
+    position: absolute;*/
+    float: left;
+    width: 100%;
+    margin: 0 0%;
+    /*top: 1px;
+    left: 1px;*/
+    height: 90%;
+    background-color: rgb(147, 140, 240);
+    overflow-y: auto;
+    z-index: 1;
 }
