--- a/app1/static/views.css
+++ b/app1/static/views.css
@@ -73,31 +73,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-.form1 {
-  margin: 10px 0;
+.table1 {
+  width: 100%;
+  background-color: whitesmoke;
 }
 
-.form1 label {
-  font-size: 16px;
-  border: 1px solid #ced4da;
+.table1 .mcell:hover {
+  background-color: red;
 }
 
-.form1 input {
-  color: green;
-  width: 250px;
-  height: 25px;
-  border: 1px solid #ced4da;
-  border-radius: 3px;
+.table1 td,
+.table1 th {
+  padding: 0.3rem;
+  vertical-align: top;
+  border-top: 1px solid #0c0c0c;
 }
 
-.form1 select {
-  color: green;
-  width: 250px;
-  height: 25px;
-  border: 1px solid #ced4da;
-  border-radius: 3px;
-}
-
-.form1 .err {
-  color: red;
+.table1 th {
+  background-color: #00ffdd;
 }
